Ensure that city names don't wrap
Such as "Cape Town"

--- a/static/scss/custom.scss
+++ b/static/scss/custom.scss
@@ -63,6 +63,7 @@ b, strong {
 
 .nav-link {
   color: #0082AB;
+  white-space: nowrap;
 }
 
 .navbar-brand {
